# linuxTest

./: .gitignore  test_nano.ppm  test_py.ppm
cpp/: CMakeLists.txt  math_utils.h  ray.h  ray_intersection.h  render.cpp  render.h  test1.cpp
cpppybind/: CMakeLists.txt  hit_record.h  math_utils.h  ray_intersection.cpp  render.cpp  render.h  test.cpp
pyt/: PythonApplicationNanobindTest.py  camera.py  simdata_loader.py
